prise en compte de la valeur et début des routes de ventes
